# relanote

./: .gitignore  Cargo.toml  LICENSE  README.md  mise.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml
crates/relanote-ast/: Cargo.toml
crates/relanote-ast/src/: expr.rs  item.rs  lib.rs  music.rs  pattern.rs  types.rs  visitor.rs
crates/relanote-cli/: Cargo.toml
crates/relanote-cli/src/: main.rs
crates/relanote-core/: Cargo.toml
crates/relanote-core/src/: intern.rs  span.rs
crates/relanote-eval/: Cargo.toml
crates/relanote-eval/src/: builtins.rs  env.rs  error.rs  eval.rs  lib.rs  value.rs
crates/relanote-format/: Cargo.toml
crates/relanote-format/src/: printer.rs
crates/relanote-hir/: Cargo.toml
crates/relanote-hir/src/: hir.rs  lib.rs  lower.rs
crates/relanote-lexer/: Cargo.toml
crates/relanote-lexer/src/: lexer.rs  token.rs
crates/relanote-lsp/: Cargo.toml
crates/relanote-lsp/src/: server.rs
crates/relanote-parser/: Cargo.toml
crates/relanote-parser/src/: expr.rs  item.rs  lib.rs  music.rs  parser.rs
crates/relanote-render/: Cargo.toml
crates/relanote-render/src/: lib.rs  midi.rs
crates/relanote-resolver/: Cargo.toml
crates/relanote-resolver/src/: error.rs  loader.rs  resolver.rs
crates/relanote-stdlib/: Cargo.toml
crates/relanote-stdlib/src/: lib.rs  prelude.rela
crates/relanote-types/: Cargo.toml
crates/relanote-types/src/: checker.rs  context.rs  inference.rs  lib.rs  types.rs  unify.rs
crates/relanote-wasm/: Cargo.toml
crates/relanote-wasm/src/: lib.rs
crates/relanote_ast/: Cargo.toml
crates/relanote_ast/src/: expr.rs  item.rs  lib.rs  music.rs  pattern.rs  visitor.rs
crates/relanote_cli/: Cargo.toml
crates/relanote_cli/src/: main.rs
crates/relanote_cli/tests/: e2e.rs
crates/relanote_core/: Cargo.toml
crates/relanote_core/src/: diagnostics.rs  lib.rs  source.rs  span.rs
crates/relanote_eval/: Cargo.toml
crates/relanote_eval/src/: env.rs  error.rs  eval.rs  lib.rs  value.rs
crates/relanote_eval/src/builtins/: block.rs  effects.rs  functional.rs  mod.rs  synth.rs
crates/relanote_eval/tests/: integration.rs
crates/relanote_format/: Cargo.toml
crates/relanote_format/src/: config.rs  lib.rs  printer.rs
crates/relanote_hir/: Cargo.toml
crates/relanote_hir/src/: lower.rs
crates/relanote_lexer/: Cargo.toml
crates/relanote_lexer/src/: lexer.rs  lib.rs  token.rs
crates/relanote_lsp/: Cargo.toml
crates/relanote_lsp/src/: lib.rs  server.rs
crates/relanote_parser/: Cargo.toml
crates/relanote_parser/src/: error.rs  expr.rs  item.rs  lib.rs  music.rs  parser.rs
crates/relanote_parser/tests/: integration.rs
crates/relanote_render/: Cargo.toml
crates/relanote_render/src/: midi.rs
crates/relanote_resolver/: Cargo.toml
crates/relanote_resolver/src/: lib.rs  loader.rs  resolver.rs
crates/relanote_stdlib/: Cargo.toml
crates/relanote_stdlib/src/: lib.rs  prelude.rela
crates/relanote_stdlib/src/prelude/: chords.rela  effects_delay.rela  effects_distortion.rela  effects_phaser.rela  effects_reverb.rela  scales.rela  synths_basic.rela  synths_bass.rela  synths_brass.rela  synths_clap.rela  synths_drums.rela  synths_leads.rela  synths_pads.rela  synths_percussion.rela  synths_piano.rela  synths_pluck.rela  synths_retro.rela
crates/relanote_types/: Cargo.toml
crates/relanote_types/src/: checker.rs  context.rs  error.rs  inference.rs  lib.rs  types.rs  unify.rs
crates/relanote_types/tests/: integration.rs
crates/relanote_wasm/: Cargo.toml
crates/relanote_wasm/src/: lib.rs
docs/: index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/.vitepress/theme/: HeroAnimation.vue  HomeLayout.vue  index.ts  style.css
docs/deep-dive/: advanced-harmony.md  architecture.md  language-design.md  music-theory.md  preset-reference.md  sound-synthesis.md  synthesizer-basics.md
docs/guide/: blocks.md  control-flow.md  functions.md  installation.md  intervals.md  introduction.md  layers.md  parts-and-sections.md  pattern-matching.md  pipes.md  quick-start.md  scales-and-chords.md  synth.md
docs/reference/: builtins.md  cli.md  intervals.md  modules.md  syntax.md  types.md
docs/tutorial/: building-chords.md  creating-a-song.md  first-melody.md  getting-started.md  synth-sounds.md
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/snippets/: relanote.code-snippets
editors/vscode/src/: client.ts  extension.ts
editors/vscode/syntaxes/: relanote.tmLanguage.json
examples/: 01_hello.rela  02_relative_rhythm.rela  04_articulations.rela  06_chords.rela  09_synth_basics.rela  11_synth_advanced.rela  README.md  hello.rela  sample.rela  showcase_8bit_adventure.rela  showcase_ambient.rela  showcase_edm.rela  showcase_ff_fanfare.rela  showcase_ff_prelude.rela  showcase_jazz.rela  showcase_n_battle.rela  showcase_organ.rela  test_simple_block.rela  test_simple_layer.rela
examples/showcases/: showcase_8bit_battle.rela  showcase_ambient.rela  showcase_dnb.rela  showcase_drums.rela  showcase_edm.rela  showcase_effects.rela  showcase_ff_fanfare.rela  showcase_jazz.rela  showcase_n_battle.rela  showcase_symphony.rela
examples/tutorials/: 03_block_concatenation.rela  05_transformations.rela  07_tuplets.rela  08_microtones.rela  09_synth_basics.rela  10_chiptune.rela  11_synth_advanced.rela
web/: nuxt.config.ts  package.json  pnpm-lock.yaml
web/components/: CodeEditor.vue  FileTree.vue  MidiPlayer.vue  StaffRenderer.vue
web/composables/: useAudioSynth.ts  useFileManager.ts  useRelanote.ts  useShare.ts
web/features/daw/: DawView.vue  MixerPanel.vue  PianoRoll.vue  SynthSelector.vue  Toolbar.vue  TrackList.vue  TransportBar.vue  index.ts  useDawState.ts
web/pages/: index.vue
web/types/: relanote.ts
web/utils/: monaco-relanote.ts
web/wasm/: package.json  relanote_wasm.d.ts  relanote_wasm.js  relanote_wasm_bg.wasm  relanote_wasm_bg.wasm.d.ts
