[workspace]
resolver = "2"
members = [
    "crates/relanote_core",
    "crates/relanote_lexer",
    "crates/relanote_ast",
    "crates/relanote_parser",
    "crates/relanote_types",
    "crates/relanote_hir",
    "crates/relanote_eval",
    "crates/relanote_stdlib",
    "crates/relanote_resolver",
    "crates/relanote_format",
    "crates/relanote_lsp",
    "crates/relanote_render",
    "crates/relanote_cli",
    "crates/relanote_wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ubugeeei"]
license = "MIT"
repository = "https://github.com/ubugeeei/relanote"

[workspace.dependencies]
# Core utilities
thiserror = "2.0"
internment = "0.8"
indexmap = "2.7"
smallvec = "1.13"

# Lexer
logos = "0.14"

# Parser
chumsky = "0.9"

# Diagnostics
ariadne = "0.4"
miette = { version = "7.4", features = ["fancy"] }

# LSP
tower-lsp = "0.20"
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# MIDI
midly = "0.5"

# NAPI (for Node.js/WASI integration)
napi = { version = "2.16", default-features = false, features = ["napi9"] }
napi-derive = "2.16"

# Internal crates
relanote_core = { path = "crates/relanote_core" }
relanote_lexer = { path = "crates/relanote_lexer" }
relanote_ast = { path = "crates/relanote_ast" }
relanote_parser = { path = "crates/relanote_parser" }
relanote_types = { path = "crates/relanote_types" }
relanote_hir = { path = "crates/relanote_hir" }
relanote_eval = { path = "crates/relanote_eval" }
relanote_stdlib = { path = "crates/relanote_stdlib" }
relanote_resolver = { path = "crates/relanote_resolver" }
relanote_format = { path = "crates/relanote_format" }
relanote_lsp = { path = "crates/relanote_lsp" }
relanote_render = { path = "crates/relanote_render" }
relanote_cli = { path = "crates/relanote_cli" }

[profile.release]
opt-level = "s"
lto = true
