[package]
name = "relanote-cli"
description = "Command-line interface for relanote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "relanote"
path = "src/main.rs"

[dependencies]
relanote-core.workspace = true
relanote-lexer.workspace = true
relanote-ast.workspace = true
relanote-parser.workspace = true
relanote-types.workspace = true
relanote-eval.workspace = true
relanote-format.workspace = true
relanote-lsp.workspace = true
relanote-render.workspace = true
clap.workspace = true
tokio.workspace = true
ariadne.workspace = true
