[package]
name = "relanote-eval"
description = "Interpreter/evaluator for relanote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
relanote-core.workspace = true
relanote-ast.workspace = true
relanote-lexer.workspace = true
relanote-types.workspace = true
thiserror.workspace = true
indexmap.workspace = true

[dev-dependencies]
relanote-parser.workspace = true
