[package]
name = "relanote-hir"
description = "High-level Intermediate Representation for relanote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
relanote-core.workspace = true
relanote-ast.workspace = true
relanote-types.workspace = true
