[package]
name = "relanote-lsp"
description = "Language Server Protocol implementation for relanote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
relanote-core.workspace = true
relanote-ast.workspace = true
relanote-lexer.workspace = true
relanote-parser.workspace = true
relanote-types.workspace = true
relanote-format.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
