[package]
name = "relanote-parser"
description = "Parser for relanote language using chumsky"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
relanote-core.workspace = true
relanote-lexer.workspace = true
relanote-ast.workspace = true
chumsky.workspace = true
ariadne.workspace = true
thiserror.workspace = true
