[package]
name = "relanote-render"
description = "Music rendering (MIDI, etc.) for relanote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
relanote-core.workspace = true
relanote-eval.workspace = true
midly.workspace = true
thiserror.workspace = true
