[package]
name = "relanote-types"
description = "Type system and type checker for relanote (Hindley-Milner)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
relanote-core.workspace = true
relanote-ast.workspace = true
thiserror.workspace = true
indexmap.workspace = true

[dev-dependencies]
relanote-parser.workspace = true
