[package]
name = "relanote_hir"
description = "High-level Intermediate Representation for relanote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
relanote_core.workspace = true
relanote_ast.workspace = true
relanote_types.workspace = true
