[package]
name = "relanote_lsp"
description = "Language Server Protocol implementation for relanote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
relanote_core.workspace = true
relanote_ast.workspace = true
relanote_lexer.workspace = true
relanote_parser.workspace = true
relanote_types.workspace = true
relanote_format.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
