[package]
name = "relanote_parser"
description = "Parser for relanote language using chumsky"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
relanote_core.workspace = true
relanote_lexer.workspace = true
relanote_ast.workspace = true
chumsky.workspace = true
ariadne.workspace = true
thiserror.workspace = true
