[package]
name = "relanote_types"
description = "Type system and type checker for relanote (Hindley-Milner)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
relanote_core.workspace = true
relanote_ast.workspace = true
thiserror.workspace = true
indexmap.workspace = true

[dev-dependencies]
relanote_parser.workspace = true
