[package]
name = "relanote_wasm"
description = "WebAssembly bindings for relanote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
relanote_core.workspace = true
relanote_lexer.workspace = true
relanote_ast.workspace = true
relanote_parser.workspace = true
relanote_types.workspace = true
relanote_eval.workspace = true
relanote_format.workspace = true
relanote_render.workspace = true

wasm-bindgen = "0.2"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

